--- a/consumer/pom.xml
+++ b/consumer/pom.xml
@@ -37,6 +37,19 @@
             <artifactId>spring-kafka</artifactId>
         </dependency>
 
+        <!-- Shared Domain Models -->
+        <dependency>
+            <groupId>com.producerkafka</groupId>
+            <artifactId>train-domain-models</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+
+        <!-- Jackson Databind (Required for JsonDeserializer) -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
+
         <!-- Lombok for cleaner code -->
         <dependency>
             <groupId>org.projectlombok</groupId>
