Add PostgreSQL service to Docker Compose configuration with healthcheck and persistent volume setup.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,4 +31,24 @@ services:
       KAFKA_CLUSTERS_0_NAME: local
       KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:29092
       DYNAMIC_CONFIG_ENABLED: 'true'
+
+  postgres:
+    image: postgres:16
+    container_name: postgres-db
+    ports:
+      - "5432:5432"
+    environment:
+      POSTGRES_USER: train_user
+      POSTGRES_PASSWORD: train_password
+      POSTGRES_DB: train_db
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U train_user -d train_db"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+volumes:
+  postgres_data:
           
