Refactor Kafka consumer implementation by removing the old KafkaConsumerService and introducing KafkaTrainDataListener for improved message handling. Add StationBoardToDomainMapper for mapping incoming data to domain commands, and implement core use cases for processing train station data. Establish repository interfaces for persisting train activities, services, and time dimensions, along with JPA adapters for database interactions. Update application properties for database configuration and add Liquibase changelog for schema management.

--- a/consumer/src/main/resources/application.properties
+++ b/consumer/src/main/resources/application.properties
@@ -15,3 +15,19 @@ spring.kafka.consumer.properties.spring.json.use.type.headers=true
 # Logging Configuration
 logging.level.com.consumerkafka.consumer=INFO
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+
+# Database Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/train_db
+spring.datasource.username=train_user
+spring.datasource.password=train_password
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA/Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# Liquibase Configuration
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
+spring.liquibase.enabled=true
